<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo_for_app"
        android:scaleType="fitXY"
        android:src="@drawable/lone_wolf_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/uploadPhotoButton"
        android:layout_width="209dp"
        android:layout_height="83dp"
        android:layout_marginTop="5dp"
        android:background="@color/forestGreen"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/upload_photo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InformationButton" />

    <Button
        android:id="@+id/RouteButton"
        android:layout_width="209dp"
        android:layout_height="83dp"
        android:layout_marginTop="5dp"
        android:background="@color/forestGreen"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/find_route"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/InformationButton"
        android:layout_width="209dp"
        android:layout_height="83dp"
        android:layout_marginTop="5dp"
        android:background="@color/forestGreen"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/information"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListButton" />

    <Button
        android:id="@+id/HelpButton"
        android:layout_width="209dp"
        android:layout_height="83dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginTop="5dp"
        android:background="@color/forestGreen"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/request_help"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadPhotoButton" />

    <Button
        android:id="@+id/ListButton"
        android:layout_width="209dp"
        android:layout_height="83dp"
        android:layout_marginTop="5dp"
        android:background="@color/forestGreen"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/list_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RouteButton" />

    <TextView
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="end"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

</androidx.constraintlayout.widget.ConstraintLayout>